# libzinc

./: AUTHORS  README.md  build.sh  meson.build
libzinc/: AABB.hh  cell.hh  encoding.hh  interval.hh  region.hh  util.hh  zinc.hh
test/: interactive-test.cc  zinc-test.cc
